Добавлена авторизация и допуск по ролям